# ttt

./: app.py  oo_ttt.py  pyproject.toml
static/stylesheets/: app.css
templates/: board.html
tests/: test_app.py
