[project]
name = "ttt"
version = "0.1.0"
description = ""
authors = [
    {name = "Daniel Langley",email = "dlangley812@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.3,<4.0.0)"
]

[tool.poetry]
packages = [{include = "ttt", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
